--- a/Website/index.html
+++ b/Website/index.html
@@ -64,6 +64,7 @@
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
                 <div class="ContractBox">
+                    <a>Employee Alias:</a>
                     <a></a>
                 </div>
         </div>
