--- a/Website/index.html
+++ b/Website/index.html
@@ -65,7 +65,7 @@
             <h2>View existing Work Contracts</h1>
                 <div class="ContractBox">
                     <a>Employee Alias:</a>
-                    <a>Proprie</a>
+                    <a>Proprietor Alias:</a>
                 </div>
         </div>
     </div>
