--- a/Website/index.html
+++ b/Website/index.html
@@ -66,7 +66,7 @@
                 <div class="ContractBox">
                     <a>Employee Alias:</a>
                     <a>Proprietor Alias:</a>
-                    <a></a>
+                    <a>Work Description:</a>
                 </div>
         </div>
     </div>
