--- a/Website/index.html
+++ b/Website/index.html
@@ -67,6 +67,7 @@
                     <a>Employee Alias:</a>
                     <a>Proprietor Alias:</a>
                     <a>Work Description:</a>
+                    <a>Ether </a>
                 </div>
         </div>
     </div>
