--- a/Website/index.html
+++ b/Website/index.html
@@ -64,9 +64,9 @@
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
                 <div class="ContractBox">
-                    <a class="contract">Employee Alias:</a>
+                    <a class="contractdetail">Employee Alias:</a>
                     <br>
-                    <a>Proprietor Alias:</a>
+                    <a class="contractdetail">Proprietor Alias:</a>
                     <br>
                     <a>Work Description:</a>
                     <br>
