--- a/Website/index.html
+++ b/Website/index.html
@@ -68,9 +68,9 @@
                     <br>
                     <a class="contractdetail">Proprietor Alias:</a>
                     <br>
-                    <a>Work Description:</a>
+                    <a class="contractdetail">Work Description:</a>
                     <br>
-                    <a>Ether to be paid:</a>
+                    <a class="contractdetail">Ether to be paid:</a>
                 </div>
         </div>
     </div>
