--- a/Website/index.html
+++ b/Website/index.html
@@ -64,7 +64,7 @@
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
                 <div class="ContractBox">
-                    <a class="contractdetail">Employee Alias:</a>
+                    <a class="contractdetail">Employee Alias:<a>test</a></a>
                     <a class="contractdetail">Proprietor Alias:</a>
                     <a class="contractdetail">Work Description:</a>
                     <a class="contractdetail">Ether to be paid:</a>
