--- a/Website/index.html
+++ b/Website/index.html
@@ -63,7 +63,7 @@
         </div>
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
-                <div class="ContractBox">
+                <div id="pContracts" class="ContractBox">
                     <a class="contractdetail">Employee Alias: <e id="eAliasDisplay">test</e></a>
                     <a class="contractdetail">Proprietor Alias:</a>
                     <a class="contractdetail">Work Description:</a>
