--- a/Website/index.html
+++ b/Website/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <button onclick="CreateWorkContract()" id="=confirm1" style="margin-top: 25px; margin-right: 5px;" class="proprietor-header confirm">Create Contract</button>
         </div>
-        <div style="margin-left: 8vw;" class="col-md" id="View Existing">
+        <div id="" style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
                 <div id="pContracts" class="ContractBox">
                     <a class="contractdetail">Employee Alias: <e>test</e></a>
