--- a/Website/index.html
+++ b/Website/index.html
@@ -61,14 +61,8 @@
                 </div>
                 <button onclick="CreateWorkContract()" id="=confirm1" style="margin-top: 25px; margin-right: 5px;" class="proprietor-header confirm">Create Contract</button>
         </div>
-        <div id="" style="margin-left: 8vw;" class="col-md" id="View Existing">
+        <div id="pContracts" style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
-                <div id="pContracts" class="ContractBox">
-                    <a class="contractdetail">Employee Alias: <e>test</e></a>
-                    <a class="contractdetail">Proprietor Alias:</a>
-                    <a class="contractdetail">Work Description:</a>
-                    <a class="contractdetail">Ether to be paid:</a>
-                </div>
         </div>
     </div>
 
