--- a/Website/index.html
+++ b/Website/index.html
@@ -69,11 +69,11 @@
     </div>
 
     <div class="container" id="Employee" style="display: none;">
-        <div id="euContracts" style="margin-left: 17%;" class="col-md" id="View Existing">
+        <div id="c" style="margin-left: 17%;" class="col-md" id="View Existing">
             <h2>View your awaiting contracts</h1>
 
         </div>
-        <div style="margin-left: 8vw;" class="col-md" id="View Existing">
+        <div id="eaContracts" style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View your work contracts</h1>
 
         </div>
