--- a/Website/index.html
+++ b/Website/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="container" id="Employee" style="display: none;">
-        <div id="c" style="margin-left: 17%;" class="col-md" id="View Existing">
+        <div id="euContracts" style="margin-left: 17%;" class="col-md" id="View Existing">
             <h2>View your awaiting contracts</h1>
 
         </div>
