--- a/Website/index.html
+++ b/Website/index.html
@@ -61,8 +61,11 @@
                 </div>
                 <button onclick="CreateWorkContract()" id="=confirm1" style="margin-top: 25px; margin-right: 5px;" class="proprietor-header confirm">Create Contract</button>
         </div>
-        <div id="pContracts" style="margin-left: 8vw;" class="col-md" id="View Existing">
+        <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
+                <div>
+                    
+                </div>
         </div>
     </div>
 
