--- a/Website/index.html
+++ b/Website/index.html
@@ -63,8 +63,8 @@
         </div>
         <div style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View existing Work Contracts</h1>
-                <div>
-                    
+                <div id="pContracts">
+
                 </div>
         </div>
     </div>
