--- a/Website/index.html
+++ b/Website/index.html
@@ -72,9 +72,11 @@
     </div>
 
     <div class="container" id="Employee" style="display: none;">
-        <div id="euContracts" style="margin-left: 17%;" class="col-md" id="View Existing">
+        <div id="euContracts" style="margin-left: 17%;" class="col-md">
             <h2>View your awaiting contracts</h1>
+                <div id="pContracts">
 
+                </div>
         </div>
         <div id="eaContracts" style="margin-left: 8vw;" class="col-md" id="View Existing">
             <h2>View your work contracts</h1>
