--- a/Website/index.html
+++ b/Website/index.html
@@ -72,9 +72,9 @@
     </div>
 
     <div class="container" id="Employee" style="display: none;">
-        <div id="euContracts" style="margin-left: 17%;" class="col-md">
+        <div style="margin-left: 17%;" class="col-md">
             <h2>View your awaiting contracts</h1>
-                <div id="pContracts">
+                <div id="eu">
 
                 </div>
         </div>
