--- a/Website/index.html
+++ b/Website/index.html
@@ -74,7 +74,7 @@
     <div class="container" id="Employee" style="display: none;">
         <div style="margin-left: 17%;" class="col-md">
             <h2>View your awaiting contracts</h1>
-                <div id="eu">
+                <div id="euContracts">
 
                 </div>
         </div>
