--- a/Website/index.html
+++ b/Website/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div style="margin-top: 2%;" class="form-group">
                     <a class="label" style="font-size: larger; font-weight: bold;" for="EtherInput">Work
-                        Total Ether to be paid:</a>
+                        Total ETC to be paid:</a>
                     <br>
                     <input style="margin-top: 0.75%;" type="number" class="form-control w-25" id="EtherInput"
                         aria-describedby="emailHelp" placeholder="Ether">
