--- a/Website/index.html
+++ b/Website/index.html
@@ -53,7 +53,7 @@
                         aria-describedby="emailHelp" placeholder="Work Desc.">
                 </div>
                 <div style="margin-top: 2%;" class="form-group">
-                    <a class="label" style="font-size: larger; font-weight: bold;" for="EtherInput">Work
+                    <a class="label" style="font-size: larger; font-weight: bold;" for="EtherInput">
                         Total ETC to be paid:</a>
                     <br>
                     <input style="margin-top: 0.75%;" type="number" class="form-control w-25" id="EtherInput"
